# product_services

./: .gitignore  Cargo.toml  build.rs
env/: .env
src/: env.rs  main.rs
src/core/: alias_type.rs  args.rs  error.rs  mod.rs
src/core/config/: config.rs  host_config.rs  id_generator_config.rs  mod.rs  postgres_config.rs  redis_config.rs
src/core/middlewares/: mod.rs  with_env.rs
src/core/utils/: tools.rs
src/product/: handler.rs  mod.rs
src/product/handler/: v1.rs
src/product/json/: mod.rs  product.rs  request.rs  table.rs
src/product/repo/: mod.rs  postgres_repo.rs  postgres_repository.rs  repository.rs
src/product/services/: mod.rs
